<resources>
    <string name="app_name">Music on the Way</string>
    <string name="Visitor">Visitor</string>
    <string name="Push">NewEvent</string>
    <string name="Name">Event Name</string>
    <string name="Info">Somes Informations</string>
    <string name="Submit">Valider</string>
    <string name="MusicOnTheWay">Music on the Way</string>
    <string name="ArtisteouVoyageur">Artiste ou Voyageur ?</string>
    <string name="soustitre">Indique nous l’usage que tu veux faire de Music on the way</string>
    <string name="IAM">Je suis un</string>
    <string name="artiste">Artiste</string>
    <string name="voyageur">Voyageur</string>
    <string name="Suivant">Suivant</string>
    <string name="eventFr">Evenements</string>
    <string name="Map">Carte</string>
    <string name="filtres">Filtres</string>
    <string name="funk">Funk</string>
    <string name="Piano">Piano</string>
    <string name="rock">Rock</string>
    <string name="Nouveau">NOUVEAU</string>
    <string name="LouisDubois">Louis Dubois</string>
    <string name="abonnes">128 \nabonnés</string>
    <string name="musiques">3 \nMusiques</string>
    <string name="Perfect">Perfect</string>
    <string name="Pop" />
    <string name="guitare">Guitare</string>
    <string name="Chant">Chant</string>
    <string name="musiqueMenu">Musiques</string>
    <string name="remaintime">-1.11</string>
    <string name="notif">notif</string>
    <string name="poppy">POP</string>
    <string name="addmusic">AJOUTER UNE MUSIQUE</string>
    <string name="addevent">AJOUTER UN EVENEMENT</string>
    <string name="createEvent">CRÉATION D\ ’UN ÉVÈNEMENT</string>
    <string name="date">Date</string>
    <string name="horaires">Horaires</string>
    <string name="lieu">Lieu</string>
    <string name="compl_ment_de_lieu">Complément de lieu...</string>
    <string name="todo">TODO</string>
    <string name="Valider">Valider</string>
    <string name="titleArticle1">Un évènement très intéressant qui se passe près de chez vous</string>
    <string name="present">Présents</string>
    <string name="past">Passés</string>


</resources>
