<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/showEvents"
            style="@style/buttonMenuSelected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/eventFr" />

        <Button
            android:id="@+id/showMaps"
            style="@style/buttonMenuUnselected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Map" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="18dp">

        <ToggleButton
            android:id="@+id/filterButton"
            style="@style/filterButton"
            android:layout_width="wrap_content"
            android:textOn="@string/filtres"
            android:textOff="@string/filtres"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="24dp"/>

        <ToggleButton
            android:id="@+id/funkFilter"
            style="@style/filterUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:autoText="false"
            android:clickable="false"
            android:textColor="@color/white"
            android:textOff="@string/funk"
            android:textOn="@string/funk" />

        <ToggleButton
            android:id="@+id/pianoFilter"
            style="@style/filterUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:textOff="@string/Piano"
            android:textOn="@string/Piano" />

        <ToggleButton
            android:id="@+id/rockFilter"
            style="@style/filterUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/rock"
            android:textOff="@string/rock"
            android:layout_marginRight="8dp"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/eventsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>