<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/backgroundColorTop">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/aller_bd"
                android:text="@string/Nouveau"
                android:textColor="@color/white"
                android:textSize="14sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/aller_bd"
                android:text="@string/LouisDubois"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:layout_marginBottom="12dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/aller_bd"
                    android:text="@string/abonnes"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_marginBottom="16dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/aller_bd"
                    android:text="@string/musiques"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_marginBottom="16dp"/>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="24dp"
            >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="93dp"
                android:layout_weight="1"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/artiste"
                app:srcCompat="@drawable/bapt" />
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/showEvents"
            style="@style/buttonMenuSelected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/present" />

        <Button
            android:id="@+id/showMaps"
            style="@style/buttonMenuUnselected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/past" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/eventfromartist"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="140dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/funkarticle"
                style="@style/filterArticle"
                android:layout_marginRight="8dp"
                android:text="@string/funk" />

            <Button
                android:id="@+id/pianoarticle"
                style="@style/filterArticle"
                android:text="@string/Piano" />

        </LinearLayout>

        <TextView
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:text="@string/titleArticle1"
            android:layout_marginTop="8dp"
            android:textSize="12dp"
            android:fontFamily="@font/bwmodelicass01_bold"/>

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Paris-Pyramides"
                android:textSize="10dp"
                android:fontFamily="@font/bwmodelicass01_regular"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Vendredi 10/01/2019 à 13h"
                android:textSize="10dp"
                android:fontFamily="@font/bwmodelicass01_regular"
                android:layout_marginLeft="115dp"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>

