<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/backgroundColorTop">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/aller_bd"
                android:text="@string/Nouveau"
                android:textColor="@color/white"
                android:textSize="14sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/aller_bd"
                android:text="@string/LouisDubois"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:layout_marginBottom="12dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/aller_bd"
                    android:text="@string/abonnes"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/aller_bd"
                    android:text="@string/musiques"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="24dp"
            >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="93dp"
                android:layout_weight="1"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/artiste"
                app:srcCompat="@drawable/bapt" />
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundColorTop2"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/pop"
            style="@style/MusicStationMetroButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/poppy" />

        <Button
            android:id="@+id/rock"
            style="@style/genreMusic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/rock" />

        <Button
            android:id="@+id/guitare"
            style="@style/genreMusic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/guitare" />

        <Button
            android:id="@+id/chant"
            style="@style/genreMusic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/Chant" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shadowrectangle"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="24dp">

                <Button
                    android:id="@+id/playBtn"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:background="@drawable/play"
                    android:onClick="playBtnClick"
                    android:layout_marginStart="24dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/aller_bd"
                    android:text="@string/Perfect"
                    android:textColor="@color/black"
                    android:layout_marginStart="32dp"/>

                <ImageView
                    android:id="@+id/isPlaying"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="200dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="8dp"
                    android:alpha="0"
                    android:contentDescription="@string/notif"
                    app:srcCompat="@drawable/playing" />

                <TextView
                    android:id="@+id/remainingTimeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remaintime" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/positionBar"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shadowrectangle"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="24dp">

                <Button
                    android:id="@+id/playBtn"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:background="@drawable/play"
                    android:onClick="playBtnClick"
                    android:layout_marginStart="24dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/aller_bd"
                    android:text="@string/funk"
                    android:textColor="@color/black"
                    android:layout_marginStart="32dp"/>

                <ImageView
                    android:id="@+id/test2"
                    android:layout_width="16dp"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/playing"
                    android:layout_marginLeft="200dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="8dp"
                    android:alpha="0"
                    />

                <TextView
                    android:id="@+id/test3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-1.11" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/test4"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"/>


        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent">

                <Button
                    android:id="@+id/buttonEvent"
                    style="@style/buttonUnselected"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:text="@string/eventFr" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/bell" />

                <Button
                    android:id="@+id/buttonMusic"
                    style="@style/buttonSelected"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/musiqueMenu" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/test"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="24dp"
            android:background="@drawable/play"
            android:onClick="playBtnClick" />


    </LinearLayout>




</LinearLayout>

