<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/eventfromuser"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="140dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/funkarticle"
                style="@style/filterArticle"
                android:layout_marginRight="8dp"
                android:text="@string/funk" />

            <Button
                android:id="@+id/pianoarticle"
                style="@style/filterArticle"
                android:text="@string/Piano" />

        </LinearLayout>

        <TextView
            android:id="@+id/TitltRowEvent"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/bwmodelicass01_bold"
            android:text="@string/titleArticle1"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/StationRowEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bwmodelicass01_regular"
                android:textSize="10dp" />

            <TextView
                android:id="@+id/DateRowEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="115dp"
                android:fontFamily="@font/bwmodelicass01_regular"
                android:textSize="10dp" />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>